force-app/main/default/objects/blocking__c/fields/Reason_for_Blocking__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Blocking__c</fullName>
    <label>Reason for Blocking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>