force-app/main/default/objects/blocking__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Blocking</relationshipLabel>
    <relationshipName>Blocking</relationshipName>
    <type>Lookup</type>
</CustomField>