force-app/main/default/objects/blocking__c/validationRules/Unblock_access_only_access_to.validationRule-meta.xml
<ValidationRule>
    <fullName>Unblock_access_only_access_to</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(OR( 
$Profile.Name  == &apos;Raymond System Admin&apos;,
$Profile.Name  ==  &apos;System Administrator&apos;,
$User.Id   ==  OwnerId,
$Profile.Name  == &apos;Sales Head&apos;
)),
TEXT(Action__c) == &apos;Unblock&apos;,
ISCHANGED(Action__c) 
)</errorConditionFormula>
    <errorMessage>You don&apos;t have access of unblock the blocked unit.</errorMessage>
</ValidationRule>